<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">App Logo</string>
    <string name="desired_league">Desired League</string>
    <string name="Mens">Mens</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="button_for_next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_the_city_and_dominate_the_league">Find a team in the city and dominate the league</string>
    <string name="get_started">Get Started</string>
    <string name="i_am_a">  I am a :</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="next">Next</string>
</resources>